adicionado uma classe a ta a

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <img src="src/images/logo.svg" alt="imagem do logo">
 
-            <a href="#">Try It Free</a>
+            <a href="#" class="btn">Try It Free</a>
         </div>
 
         <div class="hero">
