--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#">Get Started For Free</a>
             </div>
 
-            <img src="src/images/illustration-mockups.svg" alt="">
+            <img src="src/images/illustration-mockups.svg" alt="ilustração do site">
         </div>
     </header>
 
