--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="hero-info">
                 <h1>Build The Community Your Fans Will Love</h1>
                 <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-                <a href="#">Get Started For Free</a>
+                <a href="#" class="btn-2">Get Started For Free</a>
             </div>
 
             <img src="src/images/illustration-mockups.svg" alt="ilustração do site">
