--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
     </header>
 
     <main>
-        <section>
-            <div>
+        <section class="main-content first">
+            <div class="service-details">
                 <h2>Grow Together</h2>
                 <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
             </div>
 
-            <img src="src/images/illustration-grow-together.svg" alt="ilustração de uma conversa">
+            <img src="src/images/illustration-grow-together.svg" alt="ilustration Grow Together" class="ilustration">
         </section>
 
-        <section>
-            <img src="src/images/illustration-flowing-conversation.svg" alt="ilustração de uma conversa em grupo">
+        <section class="main-content second">
+            <img src="src/images/illustration-flowing-conversation.svg" alt="ilustration Flowing Conversations" class="ilustration">
 
-            <div>
+            <div class="service-details">
                 <h2>Flowing Conversations</h2>
                 <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
             </div>
         </section>
 
-        <section>
-            <div>
+        <section class="main-content third">
+            <div  class="service-details">
                 <h2>Your Users</h2>
                 <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
             </div>
 
-            <img src="src/images/illustration-your-users.svg" alt="">
+            <img src="src/images/illustration-your-users.svg" alt="ilustration Your Users" class="ilustration">
         </section>
 
         <section>
