--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="container">
         <section class="main-content first">
             <div class="service-details">
                 <h2>Grow Together</h2>
@@ -62,14 +62,13 @@
 
             <img src="src/images/illustration-your-users.svg" alt="ilustration Your Users" class="ilustration">
         </section>
-
-        <section>
-            <h2>Ready To Build Your Community?</h2>
-            <a href="#">Get Started For Free</a>
-        </section>
     </main>
-
-    <footer>
+    
+    <footer class="footer">
+        <section class="get-started">
+            <h3>Ready To Build Your Community?</h3>
+            <a href="#" class="btn-2">Get Started For Free</a>
+        </section>
         
     </footer>
 </body>
