--- a/index.html
+++ b/index.html
@@ -70,6 +70,47 @@
             <a href="#" class="btn-2">Get Started For Free</a>
         </section>
         
+        <img src="src/images/logo.svg" alt="imagem do logo">
+
+        <div class="footer-container">
+            <div class="contact-content">
+                <div class="location">
+                    <img src="src/images/icon-location.svg" alt="icone de localização">
+                    <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua</a>
+                </div>
+                <div class="phone-number">
+                    <img src="src/images/icon-phone.svg" alt="icone de um telefone">
+                    <a href="#">+1-543-123-4567</a>
+                </div>
+                <div class="email">
+                    <img src="src/images/icon-email.svg" alt="icone de um email">
+                    <a href="#">example@huddle.com</a>
+                </div>
+            </div>
+
+            <div class="about-content">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">What We Do</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+
+            <div class="career">
+                <ul>
+                    <li><a href="#">Career</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="social-content">
+                <a href="">A</a>
+                <a href="">B</a>
+                <a href="">C</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
